# MyBot

./: main.py  pyproject.toml  readm.md
