[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
colorama = "^0.4.4"
discord = "^1.7.3"
requests = "^2.28.1"
packaging = "^21.3"
simplejson = "^3.17.6"
Flask = "^2.3.2"
"discord.py" = "1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"